--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "2.4",
         "maatwebsite/excel": "^3.1",
+        "nesbot/carbon": "^2.52",
         "orangehill/iseed": "^3.0"
     },
     "require-dev": {
